--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -2,6 +2,7 @@
     display:flex;
     flex-direction: row;
     background: black;
+    height: 75px;
 }
 #logo{
     height: 50px;
@@ -22,7 +23,7 @@
 }
 @media screen and (max-width: 800px) {
     .navbar-divlogo{
-        margin:0;
+        margin:auto 0 auto 0;
     }
     .navbar-divtexto{
         width: 100%;
