--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -1,16 +1,45 @@
 .div-card-detail{
     display:flex;
     flex-direction: row;
+    justify-content: center;
     border: 1px solid black;
     border-radius: 20px;
     width: 90%;
     margin: 50px auto 50px auto;
 }
 .detail-text{
-    font-size: 1.5em;
+    font-size: 1.25em;
+    width: 100%;
+    text-align: center;
 }
 .detail-div{
     display:flex;
-    flex-direction: column;
-    align-items: center;
+    flex-direction: row;
+    justify-content: center;
+}
+.detail-description{
+    width: 90%;
+    margin: 25px auto 25px auto;
+}
+.detail-title{
+    font-size: 1.75em;
+    width: 90%;
+    margin: 25px auto 25px auto;
+}
+@media screen and (max-width: 800px) {
+    .div-card-detail{
+        display:flex;
+        flex-direction: column;
+    }
+    .img-div{
+        display:flex;
+        flex-direction: row;
+        justify-content: center;
+    }
+
+    .detail-div{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+    }
 }
