--- a/src/components/ItemDetail/ItemDetail.css
+++ b/src/components/ItemDetail/ItemDetail.css
@@ -16,6 +16,7 @@
     display:flex;
     flex-direction: row;
     justify-content: center;
+    align-items: center;
 }
 .detail-description{
     width: 90%;
@@ -25,6 +26,10 @@
     font-size: 1.75em;
     width: 90%;
     margin: 25px auto 25px auto;
+}
+.div-counter{
+    display:flex;
+    align-items: center;
 }
 @media screen and (max-width: 800px) {
     .div-card-detail{
